--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "better-react-carousel": "^1.1.1",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-content-loader": "^6.2.0",
+    "react-css-modules": "^4.7.11",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
