--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "better-react-carousel": "^1.1.1",
+    "bulma": "^0.9.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-content-loader": "^6.2.0",
